[FIX] z-indexes added for IE7 to keep cssmenus on top of other content such as tabcontent.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@33342 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/ie7.css
+++ b/css/ie7.css
@@ -28,21 +28,32 @@ body.fixed_width #editpageform {
 }
 
 #header-top {
-	z-index: 4;
+	z-index: 5;
 }
 
 #tiki-top {
 	position: relative;
-	z-index: 3;
+	z-index: 4;
 }
 
 #middle {
+	z-index: 3;
+	position: relative;
+}
+
+#col2,
+#col3 {
+	z-index: 2;
+	position: relative;
+}
+
+#col1 {
 	z-index: 1;
 	position: relative;
 }
 
 h3.box-title {
-	z-index: 0;
+	z-index: 2;
 }
 
 .cssmenu_vert ul li {
